--- a/.github/workflows/run-and-commit.yml
+++ b/.github/workflows/run-and-commit.yml
@@ -3,7 +3,7 @@ name: Run script, convert GPX, and update README map
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "0 17 * * 0"      # Sundays 19:00 Europe/Zurich (UTC cron only)
+    - cron: "0 17 * * 0" # Sundays 19:00 Europe/Zurich (UTC-only cron)
 
 permissions:
   contents: write
@@ -24,6 +24,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Sync with latest main (rebase)
+        run: |
+          git fetch origin main
+          git checkout main
+          git pull --rebase origin main
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -52,7 +58,7 @@ jobs:
 
       - name: Build README preview GeoJSON (thin points)
         run: |
-          python3 - << 'PY'
+          python3 - <<'PY'
           import json, math, os
           gpath = os.environ["GEOJSON_PATH"]
           ppath = os.environ["GEOJSON_PREVIEW"]
@@ -63,9 +69,10 @@ jobs:
 
           def thin(coords, limit):
               n = len(coords)
-              if n <= limit: return coords
-              step = math.ceil(n/limit)
-              return coords[::step] if step>1 else coords
+              if n <= limit:
+                  return coords
+              step = math.ceil(n / limit)
+              return coords[::step] if step > 1 else coords
 
           def process_geom(geom):
               t = geom.get("type")
@@ -99,50 +106,59 @@ jobs:
               json.dump(data, f, separators=(",",":"))
           PY
 
-      - name: Update README map block
+      - name: Update README map block (between markers)
         run: |
-          PREVIEW=$(cat "$GEOJSON_PREVIEW")
-          START="<!-- BEGIN: AUTO-GEOJSON -->"
-          END="<!-- END: AUTO-GEOJSON -->"
+          python3 - <<'PY'
+          import os, re, json
 
-          BLOCK="$START
-\`\`\`geojson
-$PREVIEW
-\`\`\`
-$END"
+          readme_path = os.environ["README_PATH"]
+          gpx_path = os.environ["GPX_PATH"]
+          preview_path = os.environ["GEOJSON_PREVIEW"]
 
-          if [ ! -f "$README_PATH" ]; then
-            echo "# MagicPass2GPX" > "$README_PATH"
-            echo "" >> "$README_PATH"
-          fi
+          START = "<!-- BEGIN: AUTO-GEOJSON -->"
+          END = "<!-- END: AUTO-GEOJSON -->"
 
-          if grep -q "$START" "$README_PATH"; then
-            python3 - "$README_PATH" "$START" "$END" "$BLOCK" << 'PY'
-import sys, re
-path, start, end, block = sys.argv[1:]
-with open(path, "r", encoding="utf-8") as f:
-    text = f.read()
-pattern = re.compile(re.escape(start)+r".*?"+re.escape(end), re.S)
-new = pattern.sub(block, text)
-with open(path, "w", encoding="utf-8") as f:
-    f.write(new)
-PY
-          else
-            {
-              echo ""
-              echo "## Route preview"
-              echo ""
-              echo "$BLOCK"
-              echo ""
-              echo "> This map block is auto-updated weekly from \`$GPX_PATH\`."
-              echo ""
-            } >> "$README_PATH"
-          fi
+          # Load (or init) README
+          if os.path.exists(readme_path):
+              with open(readme_path, "r", encoding="utf-8") as f:
+                  text = f.read()
+          else:
+              text = "# MagicPass2GPX\n\n"
 
-      - name: Commit & push (always)
+          # Read preview JSON and embed as fenced geojson block
+          with open(preview_path, "r", encoding="utf-8") as f:
+              preview = f.read().strip()
+
+          block = f"{START}\n```geojson\n{preview}\n```\n{END}"
+
+          if START in text and END in text:
+              pattern = re.compile(re.escape(START) + r".*?" + re.escape(END), re.S)
+              text = pattern.sub(block, text)
+          else:
+              addition = (
+                  "\n## Route preview\n\n"
+                  f"{block}\n\n"
+                  f"> This map block is auto-updated weekly from `{gpx_path}`.\n\n"
+              )
+              text += addition
+
+          with open(readme_path, "w", encoding="utf-8") as f:
+              f.write(text)
+          PY
+
+      - name: Commit & push (always; with rebase+retry)
         run: |
+          set -e
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit --allow-empty -m "chore: weekly refresh (script+GeoJSON+README) [skip ci] $(date -u +%F)"
-          git push origin HEAD:main
+
+          for i in 1 2 3; do
+            if git push origin HEAD:main; then
+              echo "Push succeeded."
+              break
+            fi
+            echo "Push failed (attempt $i). Rebasing onto latest origin/main and retrying..."
+            git pull --rebase origin main || { git rebase --abort || true; }
+          done
